<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Advanced Keyguard Manager</string>
    <string name="notif_title">Lock Manager</string>
    <string name="pair">Pair</string>
    <string name="disabler_running">Keyguard is disabled</string>
    <string name="bt_unlock_instructions">
        Select paired devices that will disable lock screen security
        while connected. Long-press an item to set additional options while
        connected (if checked).
    </string>
    <string name="wifi_unlock_instructions">
        Select known networks that will disable lock screen security
        while connected. Long-press an item to set additional options while
        connected (if checked).
    </string>
    <string name="no_paired_devices">
        No paired bluetooth devices
    </string>
    <string name="disable_keyguard">Disable Keyguard</string>
    <string name="disable_keyguard_bt_label">
        Enable management
    </string>
    <string name="disable_keyguard_wifi_label">
        Enable management
    </string>
    <string name="device_manager_description">
        Controls lock screen based on wifi and bluetooth connections
    </string>
    <string name="notif_passwd_changed_title">
        Lock password changed</string>
    <string name="notif_passwd_changed_text">
        Unlocker disabled, reset password</string>

    <string name="lockscreen_disabled">Lock screen security disabled</string>
    <string name="lockscreen_enabled">Lock screen security enabled</string>
    <string name="no_bluetooth_adapter">This device does not support bluetooth</string>
    <string name="no_networks">No Wi-Fi networks have been configured</string>
    <string name="add_network">Add Network</string>
    <string name="device_management">Device Management</string>
    <string name="device_admin_status">Device administrator status</string>
    <string name="enable">Enable</string>
    <string name="another_admin_warning">Warning: another device
        administrator is enabled on this device and can prevent the keyguard
        unlocker from working
    </string>
    <string name="overview">Overview</string>
    <string name="wifi">Wi-Fi</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="status">Status</string>
    <string name="enabled">Enabled</string>
    <string name="bypassed">Bypassed</string>
    <string name="disabled">Disabled</string>
    <string name="lockscreen_status">Lock screen security</string>
    <string name="keyguard_status">Keyguard status</string>
    <string name="set_password">Set Password</string>
    <string name="admin_add_explanation">Administrative permissions necessary
        to set and bypass the pin/password lock on the keyguard
    </string>
    <string name="pin">PIN</string>
    <string name="password">Password</string>
    <string name="pin_password_status">PIN or Password status</string>
    <string name="unset">Unset</string>
    <string name="verify_password">You must verify your current PIN or password
        before continuing
    </string>
    <string name="disabled_admin_warning">Advanced Keyguard Manager will not
        function unless device administrator is active
    </string>
    <string name="bluetooth_disabled">Bluetooth is disabled</string>
    <string name="try_again">Try again</string>
    <string name="cancel">Cancel</string>
    <string name="continu">Continue</string>
    <string name="pin_minimum">PIN must be at least 4 digits</string>
    <string name="password_minimum">Password must be at least 4 characters
    </string>
    <string name="choose_pin_password">Choose your new:</string>
    <string name="confirm_pin_password">Confirm your %s</string>
    <string name="verify_pin_password">Enter your current %s</string>
    <string name="password_changed">Password set</string>
    <string name="admin_disable_warning">Your screen will no longer unlock
        automatically if disabled
    </string>
    <string name="lock_options_for">Set options for %s</string>
    <string name="press_menu_for_more">Press menu for more options</string>
    <string name="show_notifications">Show Notifications</string>
    <string name="hide_notifications">Hide Notifications</string>
    <string name="warning_password">Advanced Keyguard Manager will not function
        unless a password is set
    </string>
    <string name="require_unlock">Require Unlock First</string>
</resources>
