<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:padding="@dimen/frame_padding"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/preferenceCategoryStyle"
            android:text="@string/device_management"
            />
    <LinearLayout
            android:layout_marginTop="@dimen/standard_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:text="@string/device_admin_status"
                />
        <include
                layout="@layout/toggle_button"
                android:id="@+id/toggle_admin"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:textOff="@string/off"
                android:textOn="@string/on"
                />
    </LinearLayout>
    <TextView
            android:id="@+id/warning"
            android:layout_marginTop="@dimen/standard_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ff0000"
            android:textStyle="bold"
            android:text="@string/another_admin_warning"
            />

    <TextView
            android:id="@+id/disabled_warning"
            android:layout_marginTop="@dimen/standard_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ff0000"
            android:textStyle="bold"
            android:text="@string/disabled_admin_warning"
            />

    <TextView
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_marginTop="@dimen/frame_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/preferenceCategoryStyle"
            android:text="@string/status"
            />
    <LinearLayout
            android:layout_marginTop="@dimen/standard_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:text="@string/pin_password_status"
                />
        <TextView
                android:id="@+id/pin_password_status"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="right"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:text="@string/unset"
                />
    </LinearLayout>
    <LinearLayout
            android:layout_marginTop="@dimen/standard_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:text="@string/lockscreen_status"
                />
        <TextView
                android:id="@+id/lockscreen_status"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="right"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:text="@string/enabled"
                />
    </LinearLayout>
    <LinearLayout
            android:layout_marginTop="@dimen/standard_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:text="@string/keyguard_status"
                />
        <TextView
                android:id="@+id/keyguard_status"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="right"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:text="@string/enabled"
                />
    </LinearLayout>
    <View android:layout_width="match_parent"
          android:layout_height="0dp"
          android:layout_weight="1"
          />
    <TextView
            android:id="@+id/press_menu_for_more"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/press_menu_for_more"/>
</LinearLayout>