<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:padding="@dimen/frame_padding"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:id="@+id/password_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/choose_pin_password"/>
    <RadioGroup
            android:id="@+id/pin_password_selection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:checkedButton="@+id/pin"
            >
        <RadioButton
                android:id="@+id/pin"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/pin"/>
        <RadioButton
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/password"/>
    </RadioGroup>
    <TextView
            android:id="@+id/warning"
            android:layout_width="match_parent"
            android:visibility="invisible"
            android:layout_height="0dp"
            android:gravity="bottom|center"
            android:layout_weight="1"
            android:textColor="#ff0000"
            android:text="@string/pin_minimum"
            />
    <EditText
            android:id="@+id/password_field"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            android:inputType="numberPassword"
            android:numeric="integer"
            android:imeOptions="flagNoEnterAction|actionNone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_margin"
            android:layout_marginLeft="@dimen/frame_padding"
            android:layout_marginRight="@dimen/frame_padding"
            />
    <View
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            />
    <LinearLayout
            android:layout_marginTop="@dimen/standard_margin"
            android:padding="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
        <Button
                android:id="@+id/cancel"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/cancel"/>
        <Button
                android:id="@+id/next"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/continu"/>
    </LinearLayout>
</LinearLayout>